# khdl-vietnam-career-clustering

./: .gitignore  2026_MS Teams-TB nộp tiểu luận cuối kỳ_23.15(2).docx.md  2026_MS Teams-TB nộp tiểu luận cuối kỳ_23.15.docx.md  CLAUDE.md  Mau tieu luan KHDL_2026.docx  Quytac.md  README.md  pyproject.toml  testing.ipynb  training.ipynb
.claude/: settings.local.json
notebooks/: 01_EDA.ipynb  02_Cleaning.ipynb  03_Feature_Engineering.ipynb  04_Modeling.ipynb  05_Embedding_Clustering.ipynb  _download_and_split.py  _embed_jds.py
report/: BaoCao.md  BaoCao_Review.md  Mau tieu luan KHDL_2026.docx.md  pipeline_overview.drawio
slide/: Slide.md
